--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <script>
         window.addEventListener('load', () => {
-            fetch('http://127.0.0.1:5000/esegui')
+            fetch('/esegui')
                 .then(response => response.json())
                 .then(data => {
                     const risultatoDiv = document.getElementById('risultato');
