--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
     <script>
         window.addEventListener('load', () => {
             fetch('/esegui')
-                .then(response => response.json())
+                .then(response => {
+                    if (!response.ok) {
+                        // Se non OK, prova a leggere il testo (potrebbe essere un messaggio di errore HTML o testo)
+                        return response.text().then(text => {
+                            throw new Error('Server ha risposto con errore: ' + text);
+                        });
+                    }
+                    return response.json();
+                })
                 .then(data => {
                     const risultatoDiv = document.getElementById('risultato');
                     if (data.errore) {
@@ -37,9 +45,10 @@
                     }
                 })
                 .catch(err => {
-                    document.getElementById('risultato').innerHTML = `<p style="color:red;">Errore di rete: ${err}</p>`;
+                    document.getElementById('risultato').innerHTML = `<p style="color:red;">Errore di rete: ${err.message}</p>`;
                 });
         });
+
     </script>
 </body>
 </html>
