--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Classifica Squadre</title>
+  <title>FFC Web Site</title>
+  <link rel="icon" type="image/svg+xml" href="/img/LogoFFC.svg">
+  <link rel="alternate icon" type="image/png" href="/img/LogoFFC.png">
   <style>
     body {
       font-family: Arial, sans-serif;
