aggiunto head per Google

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -3,13 +3,16 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Sito ufficiale dei Futuri Fuori Corso">
+  <meta name="keywords" content="calcio a 7, Reggio Emilia, squadra amatoriale, amatori, partite, csi, Futuri Fuori Corso, FFC, Taneto, Alex Righi, Mattia Numeroso">
+  <meta name="author" content="Alex Righi e Mattia Numeroso">
   <title>FFC Web Site</title>
   <link rel="icon" type="image/svg+xml" href="/img/LogoFFC.svg">
   <link rel="alternate icon" type="image/png" href="/img/LogoFFC.png">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
 
-<body class="fullscreen">
+<body>
   <div id="root">
   </div>
 </body>
