aggiunto head per Google

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Sito ufficiale dei Futuri Fuori Corso">
   <meta name="keywords" content="calcio a 7, Reggio Emilia, squadra amatoriale, amatori, partite, csi, Futuri Fuori Corso, FFC, Taneto, Alex Righi, Mattia Numeroso">
   <meta name="author" content="Alex Righi e Mattia Numeroso">
+  <meta name="google-site-verification" content="jkMCqJImxf3Cl7LzKcRWc6Gv4K_r4jmoagVPaPquuB8" />
   <title>FFC Web Site</title>
   <link rel="icon" type="image/svg+xml" href="/img/LogoFFC.svg">
   <link rel="alternate icon" type="image/png" href="/img/LogoFFC.png">
