alcune modifiche e migliore settaggio per l'indicizzazione

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Sito ufficiale dei Futuri Fuori Corso">
-  <meta name="keywords" content="calcio a 7, Reggio Emilia, squadra amatoriale, amatori, partite, csi, Futuri Fuori Corso, FFC, Taneto, Alex Righi, Mattia Numeroso">
+  <meta name="keywords" content="calcio a 7, Reggio Emilia, squadra amatoriale, amatori, partite, csi, Futuri Fuori Corso, futuri fuori corso, FFC, Taneto, Alex Righi, Mattia Numeroso">
   <meta name="author" content="Alex Righi e Mattia Numeroso">
   <meta name="google-site-verification" content="jkMCqJImxf3Cl7LzKcRWc6Gv4K_r4jmoagVPaPquuB8" />
-  <title>FFC Web Site</title>
+  <title>Sito Ufficiale Futuri Fuori Corso</title>
   <link rel="icon" type="image/svg+xml" href="/img/LogoFFC.svg">
   <link rel="alternate icon" type="image/png" href="/img/LogoFFC.png">
+  <link rel="apple-touch-icon" href="/img/LogoFFC.svg" />
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
 
