Aggiornamento anteprima Google

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -12,6 +12,20 @@
   <link rel="alternate icon" type="image/png" href="/img/LogoFFC.png">
   <link rel="apple-touch-icon" href="/img/LogoFFC.svg" />
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+
+  <!-- Open Graph (per Facebook, WhatsApp, LinkedIn, Google ecc.) -->
+  <meta property="og:title" content="Futuri Fuori Corso" />
+  <meta property="og:description" content="Sito ufficiale della squadra di calcio a 7 Futuri Fuori Corso di Reggio Emilia." />
+  <meta property="og:image" content="https://futurifuoricorso.it/img/LogoFFC.png" />
+  <meta property="og:url" content="https://futurifuoricorso.it" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card (per quando condividi su Twitter/X) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Futuri Fuori Corso" />
+  <meta name="twitter:description" content="Sito ufficiale della squadra di calcio a 7 Futuri Fuori Corso di Reggio Emilia." />
+  <meta name="twitter:image" content="https://futurifuoricorso.it/img/LogoFFC.png" />
+
 </head>
 
 <body>
