Lavori sulla canonicità del sito

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Sito ufficiale dei Futuri Fuori Corso">
-  <meta name="keywords" content="calcio a 7, Reggio Emilia, squadra amatoriale, amatori, partite, csi, Futuri Fuori Corso, futuri fuori corso, FFC, Taneto, Alex Righi, Mattia Numeroso">
+  <link rel="canonical" href="https://futurifuoricorso.it/" />
+  <meta name=" description" content="Sito ufficiale dei Futuri Fuori Corso">
+  <meta name="keywords"
+    content="calcio a 7, Reggio Emilia, squadra amatoriale, amatori, partite, csi, Futuri Fuori Corso, futuri fuori corso, FFC, Taneto, Alex Righi, Mattia Numeroso">
   <meta name="author" content="Alex Righi e Mattia Numeroso">
   <meta name="google-site-verification" content="jkMCqJImxf3Cl7LzKcRWc6Gv4K_r4jmoagVPaPquuB8" />
   <title> Sito Ufficiale Futuri Fuori Corso </title>
@@ -15,7 +17,8 @@
 
   <!-- Open Graph (per Facebook, WhatsApp, LinkedIn, Google ecc.) -->
   <meta property="og:title" content="Futuri Fuori Corso" />
-  <meta property="og:description" content="Sito ufficiale della squadra di calcio a 7 Futuri Fuori Corso di Reggio Emilia." />
+  <meta property="og:description"
+    content="Sito ufficiale della squadra di calcio a 7 Futuri Fuori Corso di Reggio Emilia." />
   <meta property="og:image" content="https://futurifuoricorso.it/img/LogoFFC.png" />
   <meta property="og:url" content="https://futurifuoricorso.it" />
   <meta property="og:type" content="website" />
@@ -23,7 +26,8 @@
   <!-- Twitter Card (per quando condividi su Twitter/X) -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Futuri Fuori Corso" />
-  <meta name="twitter:description" content="Sito ufficiale della squadra di calcio a 7 Futuri Fuori Corso di Reggio Emilia." />
+  <meta name="twitter:description"
+    content="Sito ufficiale della squadra di calcio a 7 Futuri Fuori Corso di Reggio Emilia." />
   <meta name="twitter:image" content="https://futurifuoricorso.it/img/LogoFFC.png" />
 
 </head>
